--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.14",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
@@ -23,6 +24,7 @@
     "canvas": "^2.11.2",
     "dotenv": "^16.3.1",
     "fastify": "^4.25.2",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "nodemailer": "^6.9.8"
   }
 }
