--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,4 @@ jobs:
       - name: Ping Server
         uses: tyrrrz/action-http-request@master
         with:
-          url: https://api.phazed.xyz/api/update?key=${{ secret.MASTER_KEY }}
+          url: https://api.phazed.xyz/api/update?key=${{ secrets.MASTER_KEY }}
