--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.14",
+    "@types/qrcode": "^1.5.5",
+    "@types/speakeasy": "^2.0.10",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.484.0",
+    "@fastify/swagger": "^8.13.0",
+    "@fastify/swagger-ui": "^2.0.1",
     "@fastify/type-provider-typebox": "^4.0.0",
     "@sinclair/typebox": "^0.32.4",
     "argon2": "^0.31.2",
@@ -25,6 +29,8 @@
     "dotenv": "^16.3.1",
     "fastify": "^4.25.2",
     "mongoose": "^8.0.3",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.9.8",
+    "qrcode": "^1.5.3",
+    "speakeasy": "^2.0.0"
   }
 }
